--- a/TestOne/TestOne.csproj
+++ b/TestOne/TestOne.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EAPageObject.cs" />
+    <Compile Include="LoginPageObj.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="PropertiesCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
