--- a/TestOne/packages.config
+++ b/TestOne/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExcelDataReader" version="3.4.0" targetFramework="net461" />
+  <package id="ExcelDataReader.DataSet" version="3.4.0" targetFramework="net461" />
   <package id="NUnit" version="3.10.1" targetFramework="net461" />
   <package id="NUnit.ConsoleRunner" version="3.8.0" targetFramework="net461" />
   <package id="NUnit.Extension.NUnitProjectLoader" version="3.6.0" targetFramework="net461" />
